Working on userFeature